[BE] JVM 및 런타임 튜닝